1. Adjusted a text layout bug when selecting images with constraints and there are no media items in the library
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/trunk@2608 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-engines.css
+++ b/web/css/a-engines.css
@@ -296,7 +296,8 @@ width: 104px
 
 .a-media-selection { margin-bottom: 0; }
 
-.a-media-selection-contraints h4.a-help { margin: 10px 0 20px 0; font-size: 14px; line-height: 1.2; width: 67%; }
+.a-media-selection-contraints { clear: both; overflow: hidden; }
+.a-media-selection-contraints h3 { margin: 0 0 10px 0; }
 
 .a-media-row { position: relative; float: left; width: 100%; padding-bottom: 30px; margin-bottom: 30px; border-bottom: 1px solid #efefef; }
 .a-media-row:last-child { border-bottom: none; }
